nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: redirector
  labels:
    app.kubernetes.io/instance: redirector
    app.kubernetes.io/component: nginx
    app.kubernetes.io/par-of: redirector
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: redirector
    app.kubernetes.io/component: nginx
    app.kubernetes.io/par-of: redirector

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: redirector
    app.kubernetes.io/component: nginx
    app.kubernetes.io/par-of: redirector
  name: nginx
  namespace: redirector
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: redirector
      app.kubernetes.io/component: nginx
      app.kubernetes.io/par-of: redirector
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: redirector
        app.kubernetes.io/component: nginx
        app.kubernetes.io/par-of: redirector
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 25m
            memory: 128Mi
        ports:
          - containerPort: 8080
            protocol: TCP
        volumeMounts:
          - name: redirects-config
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: redirects-config
          configMap:
            name: redirects-config
