rswgooi.nl.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rswgooi-nl
  namespace: redirector
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - rswgooi.nl
    - www.rswgooi.nl
    secretName: www-rswgooi-nl
  ingressClassName: nginx
  rules:
    - host: rswgooi.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 8080
    - host: www.rswgooi.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 8080
